src/bootstrap/test/v0_6/rejects/05_user_redecl_option/main.zg
# requires: v0.6

enum Option { Foo, Bar }

print Option.Foo
